Bug 757076: Make page protection check optional (r=wmaddox+)

CL@1091218